--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 @tailwind base;
+
+@layer base {
+	h1 {
+		@apply text-3xl;
+	}
+	h2 {
+		@apply text-2xl;
+	}
+	h3 {
+		@apply text-xl;
+	}
+}
+
 @tailwind components;
 @tailwind utilities;
