added come base styles, safe external link and homepage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,5 +14,13 @@
 	}
 }
 
+@layer base {
+	a {
+		text-decoration: underline;
+		color: #3b82f6;
+		cursor: pointer;
+	}
+}
+
 @tailwind components;
 @tailwind utilities;
