workaround for css bug on save button - still doesnt work how Id like but better than the buggy version

--- a/client/src/components/util/spinner.css
+++ b/client/src/components/util/spinner.css
@@ -1,5 +1,5 @@
 .spinner {
-	display: inline-block;
+	display: block;
 	border: 5px solid #f3f3f3; /* Light grey */
 	border-top: 5px solid #3498db; /* Blue */
 	border-radius: 50%;
